# docarray

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  aux.py  benchmark_serializing.py  mkdocs.yml  pyproject.toml  setup.py  simple-dl.csv  simple-dl.json  test.py
.github/: CODE_OF_CONDUCT.md  codecov.yml  labeler.yml  pull_request_template.md  release-template.ejs  requirements-cicd.txt  requirements-test.txt
.github/ISSUE_TEMPLATE/: bug-v1-deprecated.yml  bug-v1.yml  bug-v2.yml  config.yml  feature_request.yml
.github/workflows/: add_license.yml  build-old-docs.yml  build_docs_on_branch.yml  cd.yml  ci.yml  ci_only_pr.yml  codeql-analysis.yml  force-docs-build.yml  force-release.yml  jekyll-gh-pages.yml  label-pr.yml  publish-docarray-org.yml  publish-docarry-org.yml  tag.yml  uncaped.yml
docarray/: __init__.py  base.py  exceptions.py  helper.py  lookup.py  types.py  typing.py
docarray/array/: __init__.py  abstract_array.py  annlite.py  any_array.py  any_collections.py  array.py  array_stacked.py  base.py  chunk.py  clickhouse.py  configs.py  document.py  documentarray.py  elastic.py  find.py  list_advance_indexing.py  match.py  memory.py  milvus.py  opensearch.py  pqlite.py  qdrant.py  redis.py  sqlite.py  weaviate.py
docarray/base_doc/: __init__.py  any_doc.py  base_node.py  doc.py  doc_response.py  docarray_response.py
docarray/base_document/: __init__.py  abstract_document.py  any_document.py  base_node.py  doc.py  doc_response.py  document.py  document_response.py
docarray/computation/: __init__.py  abstract_comp_backend.py  abstract_numpy_based_backend.py  abstracttensor_backend.py  jax_backend.py  numpy_backend.py  tensorflow_backend.py  torch_backend.py
docarray/data/: __init__.py  torch_dataset.py
docarray/dataclass/: multimodal.py
docarray/dataclasses/: __init__.py  enums.py  getter.py  serializers.py  setter.py  types.py
docarray/display/: document_array_summary.py  document_summary.py  tensor_display.py
docarray/doc_index/: __init__.py  abstract.py  abstract_doc_index.py
docarray/document/: __init__.py  abstract_document.py  any_document.py  base.py  base_node.py  data.py  document.py  document_response.py  generators.py  pydantic_model.py  score.py  strawberry_type.py
docarray/document_base/: __init__.py  abstract_document.py  document.py
docarray/documents/: __init__.py  audio.py  base_predefined_doc.py  helper.py  image.py  mesh.py  point_cloud.py  text.py  video.py
docarray/exceptions/: exceptions.py
docarray/index/: __init__.py  abstract.py
docarray/math/: evaluation.py  helper.py  ndarray.py
docarray/ndarray/: __init__.py
docarray/plotting/: document_summary.py
docarray/predefined_document/: __init__.py  audio.py  image.py  mesh.py  point_cloud.py  text.py  video.py
docarray/proto/: __init__.py  build-proto.sh  docarray.proto  docarray_pb2.py  dummy_pb2.py  flush.py
docarray/remote/: __init__.py  file.py  jinaai.py  s3.py
docarray/resources/: ci-vendors.json
docarray/score/: __init__.py  data.py
docarray/storage/: abstract_doc_store.py
docarray/store/: __init__.py  abstract_doc_store.py  exceptions.py  file.py  helpers.py  jac.py  jinaai.py  s3.py
docarray/types/: __init__.py  deserializers.py  multimodal.py  serializers.py
docarray/typing/: __init__.py  abstract_type.py  abstract_typing.py  base_64.py  bytes.py  embedding.py  id.py  ndarray.py  proto_register.py
docarray/util/: __init__.py  _typing.py  find.py
docarray/utility/: __init__.py  find.py
docarray/utils/: __init__.py  _typing.py  apply.py  cache.py  compress.py  create.py  create_dynamic_doc_class.py  filter.py  find.py  lookup.py  map.py  misc.py  progress_bar.py  protocols.py  query_parser.py  reduce.py
docs/: .buildinfo  .gitignore  404.html  CNAME  README.md  _versions.json  _versions.yml  api.rst  api_public.rst  conf.py  glossary.md  index.html  index.md  index_init.md  makedoc.sh  makedocs.sh  migration_guide.md  objects.inv  requirements.txt  searchindex.js  sitemap.xml  y2j.py
docs/404/: index.html
docs/API_reference/: .pages
docs/CONTRIBUTING/: index.html
docs/_modules/: index.html
docs/_sources/: index.md.txt
docs/_static/: documentation_options.js  source-in-links.js
docs/_templates/: page.html
docs/api/: docarray.array.mixins.io.dict.rst  docarray.array.mixins.io.rst  docarray.array.mixins.io.tt.rst  docarray.array.mixins.pydantic.rst  docarray.array.mixins.rst  docarray.array.pqlite.rst  docarray.array.rst  docarray.array.storage.annlite.backend.rst  docarray.array.storage.base.rst  docarray.array.storage.elastic.backend.rst  docarray.array.storage.memory.rst  docarray.array.storage.pqlite.rst  docarray.array.storage.pqlite.seqlike.rst  docarray.array.storage.qdrant.helper.rst  docarray.array.storage.registry.rst  docarray.array.storage.rst  docarray.array.storage.weaviate.backend.rst  docarray.array.storage.weaviate.rst  docarray.dataclasses.rst  docarray.dataclasses.setter.rst  docarray.document.mixins.featurehash.rst  docarray.document.mixins.property.rst  docarray.document.mixins.rst  docarray.document.rst  docarray.proto.io.rst  docarray.proto.rst  docarray.types.deserializers.rst  index.html  (+2 more)
scripts/: README.md  add_license.sh  benchmark_html.py  benchmark_json.py  benchmarking.py  benchmarking_dataset.py  benchmarking_html.py  benchmarking_sift1m.py  benchmarking_sift1m_RQ.py  benchmarking_sift_1M.py  benchmarking_utils.py  black.sh  create-conda-recipe.py  docker-compose.yml  docstrings_lint.sh  gen_doc_property_mixin.py  gen_ns_property_mixin.py  gen_property_mixin.py  generate_property.py  get-all-oldproto-test-paths.sh  get-all-paddle-test-paths.sh  get-all-test-paths.sh  get-last-release-note.py  install_pydantic_v2.sh  license.txt  overload_docstrings.py  overload_docstrings.sh  prepend_version_json.py  release.sh  update-fluent-interface.py  versions_yaml_2_json.py
site/: 404.html  index.html
testing/: benchmark_upload.py  da_test.py  gen_db.py
tests/: __init__.py  conftest.py
(+40258 files in other folders)
