[tool.poetry]
name = "docarray"
version = '0.30.0a3'
description='The data structure for unstructured data'
authors=['DocArray']
license='Apache 2.0'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = ">=1.10.2"
numpy = ">=1.17.3"
protobuf = { version = ">=3.19.0", optional = true }
torch = { version = ">=1.0.0", optional = true }
orjson = ">=3.8.2"
pillow = {version = ">=9.3.0", optional = true }
types-pillow = {version = ">=9.3.0.1", optional = true }
trimesh = {version = ">=3.17.1", optional = true}
typing-inspect = ">=0.8.0"
types-requests = ">=2.28.11.6"
av = {version = ">=10.0.0", optional = true}
fastapi = {version = ">=0.87.0", optional = true }
rich = ">=13.1.0"
hnswlib = {version = ">=0.6.2", optional = true }
lz4 = {version= ">=1.0.0", optional = true}
pydub = {version = "^0.25.1", optional = true }
pandas = {version = ">=1.1.0", optional = true }
smart-open = {version = ">=6.3.0", extras = ["s3"], optional = true}
jina-hubble-sdk = {version = ">=0.34.0", optional = true}

[tool.poetry.extras]
common = ["protobuf", "lz4"]
torch = ["torch"]
image = ["pillow", "types-pillow"]
video = ["av"]
audio = ["pydub"]
mesh = ["trimesh"]
web = ["fastapi"]
hnswlib = ["hnswlib"]
pandas = ["pandas"]
jac = ["jina-hubble-sdk"]
aws = ["smart-open"]

# all
full = ["protobuf", "lz4", "pillow", "types-pillow", "av", "pydub", "trimesh"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pre-commit = ">=2.20.0"
jupyterlab = ">=3.5.0"
mypy = ">=1"
types-protobuf = ">=3.20.4"
black = ">=22.10.0"
isort = ">=5.10.1"
ruff = ">=0.0.243"

[tool.poetry.group.dev.dependencies]
uvicorn = ">=0.19.0"
httpx = ">=0.23.0"
pytest-asyncio = ">=0.20.2"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = ">=0.20.0"}
mkdocs-material= ">=9.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['docarray/proto']
plugins = "pydantic.mypy"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "av"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trimesh"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hnswlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "IPython.display"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hubble.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "smart_open"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore"
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true # equivalent to black -S
exclude = 'docarray/proto/pb*/*'

[tool.isort]
skip_glob= ['docarray/proto/pb2/*', 'docarray/proto/pb/*']

[tool.ruff]
exclude = ['docarray/proto/pb2/*', 'docarray/proto/pb/*', 'docs/*']
ignore = [
    "E501",  # line too long, handled by black
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests as requiring internet (deselect with '-m \"not internet\"')",
    "asyncio: marks that run async tests",
    "proto: mark tests that run with proto",
    "tensorflow: marks test using tensorflow and proto 3",
    "index: marks test using a document index",
    "benchmark: marks slow benchmarking tests",
]
