[tool.poetry]
name = "docarray"
version = '0.30.0a4'
description='The data structure for multimodal data'
readme = 'README.md'
authors=['DocArray']
license='Apache 2.0'
homepage = "https://docs.docarray.org/"
repository = "https://github.com/docarray/docarray"
documentation = "https://docs.docarray.org/"
keywords = ['docarray', 'deep-learning', 'data-structures cross-modal multi-modal',' unstructured-data',' nested-data','neural-search']
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Unix Shell',
        'Environment :: Console',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: OS Independent',
        'Topic :: Database :: Database Engines/Servers',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
        'Topic :: Scientific/Engineering :: Image Recognition',
        'Topic :: Multimedia :: Video',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Mathematics',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = ">=1.10.2"
numpy = ">=1.17.3"
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
orjson = ">=3.8.2"
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
typing-inspect = ">=0.8.0"
types-requests = ">=2.28.11.6"
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
rich = ">=13.1.0"
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
lz4 = {version= ">=1.0.0", optional = true}
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
elastic-transport = {version ="^8.4.0", optional = true }
__version__ = '0.30.0.dev224.dev224.dev224.dev224'

[tool.poetry.extras]
proto = ["protobuf", "lz4"]
pandas = ["pandas"]
image = ["pillow", "types-pillow"]
video = ["av"]
audio = ["pydub"]
mesh = ["trimesh"]
hnswlib = ["hnswlib"]
elasticsearch = ["elasticsearch", "elastic-transport"]
jac = ["jina-hubble-sdk"]
aws = ["smart-open"]
torch = ["torch"]
web = ["fastapi"]
qdrant = ["qdrant-client"]
weaviate = ["weaviate-client"]

# all
full = ["protobuf", "lz4", "pandas", "pillow", "types-pillow", "av", "pydub", "trimesh"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pre-commit = ">=2.20.0"
jupyterlab = ">=3.5.0"
mypy = ">=1"
types-protobuf = ">=3.20.4"
black = ">=22.10.0"
isort = ">=5.10.1"
ruff = ">=0.0.243"
blacken-docs = ">=1.13.0"

[tool.poetry.group.dev.dependencies]
uvicorn = ">=0.19.0"
httpx = ">=0.23.0"
pytest-asyncio = ">=0.20.2"


[tool.poetry.group.docs.dependencies]
__version__ = '0.30.0.dev224.dev224.dev224.dev224'
mkdocs-material= ">=9.1.2"
mkdocs-awesome-pages-plugin = ">=2.8.0"
mktestdocs= ">=0.2.0"
mkdocs-video = ">=1.5.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['docarray/proto']
plugins = "pydantic.mypy"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "botocore",
    "pydub",
    "boto3",
    "lz4",
    "smart_open",
    "hubble.*",
    "IPython.display",
    "typing_inspect",
    "hnswlib",
    "trimesh",
    "pandas",
    "av",
    "weaviate"
]
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true # equivalent to black -S
exclude = 'docarray/proto/pb*/*'

[tool.isort]
skip_glob= ['docarray/proto/pb2/*', 'docarray/proto/pb/*']

[tool.ruff]
exclude = ['docarray/proto/pb2/*', 'docarray/proto/pb/*', 'docs/*']
ignore = [
    "E501",  # line too long, handled by black
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests as requiring internet (deselect with '-m \"not internet\"')",
    "asyncio: marks that run async tests",
    "proto: mark tests that run with proto",
    "tensorflow: marks test using tensorflow and proto 3",
    "index: marks test using a document index",
    "benchmark: marks slow benchmarking tests",
    "elasticv8: marks test that run with ElasticSearch v8",
]
