[tool.poetry]
name = "docarray"
version = '0.31.0'
description='The data structure for multimodal data'
readme = 'README.md'
authors=['DocArray']
license='Apache 2.0'
homepage = "https://docs.docarray.org/"
repository = "https://github.com/docarray/docarray"
documentation = "https://docs.docarray.org/"
keywords = ['docarray', 'deep-learning', 'data-structures cross-modal multi-modal',' unstructured-data',' nested-data','neural-search']
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Unix Shell',
        'Environment :: Console',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: OS Independent',
        'Topic :: Database :: Database Engines/Servers',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
        'Topic :: Scientific/Engineering :: Image Recognition',
        'Topic :: Multimedia :: Video',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Mathematics',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = ">=1.10.2"
numpy = ">=1.17.3"
protobuf = { version = ">=3.19.0", optional = true }
torch = { version = ">=1.0.0", optional = true }
orjson = ">=3.8.2"
pillow = {version = ">=9.3.0", optional = true }
types-pillow = {version = ">=9.3.0.1", optional = true }
trimesh = {version = ">=3.17.1", extras = ["easy"], optional = true }
typing-inspect = ">=0.8.0"
types-requests = ">=2.28.11.6"
av = {version = ">=10.0.0", optional = true}
fastapi = {version = ">=0.87.0", optional = true }
rich = ">=13.1.0"
hnswlib = {version = ">=0.6.2", optional = true }
lz4 = {version= ">=1.0.0", optional = true}
pydub = {version = "^0.25.1", optional = true }
pandas = {version = ">=1.1.0", optional = true }
weaviate-client = {version = ">=3.15", optional = true}
elasticsearch = {version = ">=7.10.1", optional = true }
smart-open = {version = ">=6.3.0", extras = ["s3"], optional = true}
jina-hubble-sdk = {version = ">=0.34.0", optional = true}
elastic-transport = {version ="^8.4.0", optional = true }
qdrant-client = {version = ">=1.1.4", python = "<3.12", optional = true }

[tool.poetry.extras]
proto = ["protobuf", "lz4"]
pandas = ["pandas"]
image = ["pillow", "types-pillow"]
video = ["av"]
audio = ["pydub"]
mesh = ["trimesh"]
hnswlib = ["hnswlib"]
elasticsearch = ["elasticsearch", "elastic-transport"]
jac = ["jina-hubble-sdk"]
aws = ["smart-open"]
torch = ["torch"]
web = ["fastapi"]
qdrant = ["qdrant-client"]
weaviate = ["weaviate-client"]

# all
full = ["protobuf", "lz4", "pandas", "pillow", "types-pillow", "av", "pydub", "trimesh"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pre-commit = ">=2.20.0"
jupyterlab = ">=3.5.0"
mypy = ">=1"
types-protobuf = ">=3.20.4"
black = ">=22.10.0"
isort = ">=5.10.1"
ruff = ">=0.0.243"
blacken-docs = ">=1.13.0"

[tool.poetry.group.dev.dependencies]
uvicorn = ">=0.19.0"
httpx = ">=0.23.0"
pytest-asyncio = ">=0.20.2"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = ">=0.20.0"}
mkdocs-material= ">=9.1.2"
mkdocs-awesome-pages-plugin = ">=2.8.0"
mktestdocs= ">=0.2.0"
mkdocs-video = ">=1.5.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['docarray/proto']
plugins = "pydantic.mypy"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "botocore",
    "pydub",
    "boto3",
    "lz4",
    "smart_open",
    "hubble.*",
    "IPython.display",
    "typing_inspect",
    "hnswlib",
    "trimesh",
    "pandas",
    "av",
    "weaviate"
]
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true # equivalent to black -S
exclude = 'docarray/proto/pb*/*'

[tool.isort]
skip_glob= ['docarray/proto/pb2/*', 'docarray/proto/pb/*']

[tool.ruff]
exclude = ['docarray/proto/pb2/*', 'docarray/proto/pb/*', 'docs/*']
ignore = [
    "E501",  # line too long, handled by black
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests as requiring internet (deselect with '-m \"not internet\"')",
    "asyncio: marks that run async tests",
    "proto: mark tests that run with proto",
    "tensorflow: marks test using tensorflow and proto 3",
    "index: marks test using a document index",
    "benchmark: marks slow benchmarking tests",
    "elasticv8: marks test that run with ElasticSearch v8",
]
